# gauge

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile.server  LICENSE-APACHE  README.md  about.hbs  about.toml  deny.toml  dist-workspace.toml  fly.toml  release-plz.toml
.github/workflows/: ci.yml  release-plz.yml  release.yml
crates/gauge/: Cargo.toml
crates/gauge-auth/: Cargo.toml
crates/gauge-auth/src/: challenge.rs  client.rs  error.rs  jwt.rs  keypair.rs  lib.rs  protocol.rs  user.rs  wire.rs
crates/gauge-events/: Cargo.toml  SPEC.md
crates/gauge-events/src/: lib.rs  otlp.rs  profile.rs
crates/gauge-events/src/sender/: drain.rs  encode.rs  mod.rs  queue.rs  transport.rs
crates/gauge-events/tests/: otlp_roundtrip.rs  profile_validation.rs  sender_drain.rs  spec_pin.rs
crates/gauge-events/tests/fixtures/: valid_batch.json
crates/gauge-query/: Cargo.toml
crates/gauge-query/src/: field.rs  lib.rs  meta.rs  request.rs  response.rs  validate.rs
crates/gauge-query/tests/: dsl.rs
crates/gauge-server/: Cargo.toml
crates/gauge-server/src/: app.rs  config.rs  db.rs  error.rs  lib.rs  main.rs  sqlbuild.rs  state.rs
crates/gauge-server/src/middleware/: bearer.rs  mod.rs  rate_limit.rs
crates/gauge-server/src/routes/: auth.rs  health.rs  ingest.rs  meta.rs  mock.rs  mod.rs  query.rs
crates/gauge-server/src/snapshots/: gauge_server__sqlbuild__tests__snapshot_aggregate_measures.snap  gauge_server__sqlbuild__tests__snapshot_in_and_exists_filters.snap  gauge_server__sqlbuild__tests__snapshot_minimal_count.snap  gauge_server__sqlbuild__tests__snapshot_numeric_bucket.snap  gauge_server__sqlbuild__tests__snapshot_numeric_filter.snap  gauge_server__sqlbuild__tests__snapshot_spec_example.snap
crates/gauge-server/tests/: auth.rs  bearer.rs  db.rs  health.rs  ingest.rs  meta.rs  mock.rs  privacy_canary.rs  query.rs  rate_limit.rs
crates/gauge-server/tests/common/: mod.rs
crates/gauge-telemetry/: Cargo.toml  PORTING.md  SPEC.md
crates/gauge-telemetry/src/: canary.rs  client.rs  common.rs  consent.rs  env.rs  event.rs  flush.rs  identity.rs  lib.rs
crates/gauge-telemetry/tests/: canary_suite.rs  conformance.rs  spec_pin.rs
crates/gauge-telemetry/tests/snapshots/: spec_pin__command_invoked_otlp_body_is_pinned.snap
crates/gauge/src/: api.rs  config.rs  error.rs  keys.rs  lib.rs  main.rs  paths.rs  query_cmd.rs  term.rs
crates/gauge/src/mcp/: mod.rs  render.rs  schemas.rs  server.rs  tools.rs
crates/gauge/src/status/: art.rs  mod.rs
crates/gauge/src/tui/: app.rs  config.rs  data.rs  layout.rs  mod.rs  run.rs  theme.rs  ui.rs
crates/gauge/src/tui/panels/: apps_table.rs  breakdown.rs  histogram.rs  mod.rs  numeric_stats.rs  stat.rs  timeseries.rs  top_n.rs
crates/gauge/tests/: api.rs  config.rs  keys.rs  status.rs  tui_data.rs  tui_render.rs
docs/: deploy.md
docs/superpowers/plans/: 2026-06-12-gauge-platform.md  2026-06-17-gauge-telemetry-kernel.md  2026-06-17-mcp-tools-upgrade.md  2026-06-17-numeric-query-dsl.md  2026-06-18-tui-dashboard-1-foundations.md  2026-06-18-tui-dashboard-2-panels-data.md  2026-06-18-tui-dashboard-3-integration.md  2026-06-18-tui-dashboard-4-filtering.md  2026-06-18-tui-dashboard-5-menu-persistence.md  2026-06-22-status-version-commands.md
docs/superpowers/reports/: 2026-06-12-implementation-report.md
docs/superpowers/specs/: 2026-06-12-gauge-telemetry-platform-design.md  2026-06-17-gauge-telemetry-kernel-design.md  2026-06-17-mcp-tools-upgrade-design.md  2026-06-17-numeric-query-dsl-design.md  2026-06-18-tui-dashboard-redesign-design.md  2026-06-22-status-version-commands-design.md
migrations/: 0001_events.sql
