[package]
name = "gauge-auth"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
thiserror.workspace = true
time.workspace = true
uuid.workspace = true
base64.workspace = true
ed25519-dalek.workspace = true
rand_core.workspace = true
jsonwebtoken.workspace = true
toml.workspace = true
