[package]
name = "gauge-events"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
sender = ["dep:reqwest"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
time.workspace = true
uuid.workspace = true
reqwest = { workspace = true, optional = true, features = ["blocking"] }

[dev-dependencies]
tempfile.workspace = true
tokio.workspace = true
wiremock.workspace = true
