[package]
name = "gauge-events"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "OTLP event types and a lightweight sender for Gauge, the privacy-first developer telemetry platform."
keywords = ["telemetry", "otlp", "analytics", "observability"]
categories = ["development-tools"]
readme = "SPEC.md"

[features]
sender = ["dep:reqwest"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
time.workspace = true
uuid.workspace = true
reqwest = { workspace = true, optional = true, features = ["blocking"] }

[dev-dependencies]
tempfile.workspace = true
tokio.workspace = true
wiremock.workspace = true
