[package]
name = "gauge-query"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Typed query DSL (measures, dimensions, filters) for Gauge, the privacy-first developer telemetry platform."
keywords = ["telemetry", "query", "analytics", "dsl"]
categories = ["development-tools"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
time.workspace = true
schemars.workspace = true
