[package]
name = "gauge"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
gauge-auth = { path = "../gauge-auth" }
gauge-query = { path = "../gauge-query" }
clap.workspace = true
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
time.workspace = true
base64.workspace = true
toml.workspace = true
schemars.workspace = true
rmcp.workspace = true

[dev-dependencies]
wiremock.workspace = true
tempfile.workspace = true
